--- a/style.css
+++ b/style.css
@@ -24,3 +24,29 @@ body {
   font-size: var(--font-size);
   background-color: var(--color-light-grayish-blue);
 }
+
+main {
+  height: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  padding: 2em;
+}
+
+img {
+  width: 100%;
+  display: block;
+}
+
+ul {
+  list-style-type: none;
+}
+
+button {
+  background: none;
+  color: inherit;
+  outline: transparent;
+  border: transparent;
+}
